# SPDX-FileCopyrightText: 2024 The Exchangers MailDevelopers
#
# SPDX-License-Identifier: Apache-2.0

[package]
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
categories = ["cloud", "email"]
edition = "2018"
homepage = "https://github.com/exchangers-mail/exchanger"
keywords = ["imap", "dav", "smtp", "caldav", "carddav", "exchange", "cloud", "email"]
license = "Apache-2.0"
name = "exchanger"
readme = "README.md"
repository = "https://github.com/exchangers-mail/exchanger.git"
rust-version = "1.69.0"
version = "0.1.0"

[lib]
name = "exchanger"
path = "src/lib.rs"

[[bin]]
name = "exchanger"
path = "src/main.rs"

[features]
default = []
test-tool = []

[dependencies]
anyhow = { version = "1.0.89", default-features = false }
thiserror = "1.0.63"
exchange-rs = { git = "https://github.com/exchangers-mail/exchange-rs", branch = "main" }

[profile.dev]
lto = true
opt-level = 3
codegen-units = 1
debug = true

[profile.dev.package."*"]
codegen-units = 1
opt-level = 3
debug = true

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
debug = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
debug = false
