[package]
name = "common"
authors.workspace = true
version.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
